# libsdptransform

./: .gitmodules  CMakeLists.txt
cmake/: CPMSimple.cmake
include/: json.hpp  sdptransform.hpp
src/: grammar.cpp  parser.cpp  writer.cpp
